--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,5 @@
-FROM openjdk:21-jdk
-WORKDIR /app
+FROM eclipse-temurin:21
+RUN mkdir /opt/app
 COPY target/*.jar app.jar
+CMD ["java", "-jar", "/opt/app/japp.jar"]
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "app.jar"]
